ocl/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name  : mariadb
  labels:
    app: mariadb
spec:
  revisionHystoryLimit: 10
  strategy:
    type  : Recreate
  selector:
    matchLabels:
      app : mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name           : mariadb
        image          : mariadb:latest
        imagePullPolicy: Always
        ports:
        - name : mysql
          containerPort: 3306
        livenessProbe:
          exec:
            command:
            - /usr/bin/healthcheck
          initialDelaySeconds: 30
          timeoutSeconds: 3
          failureTreshold: 30
        readinessProbe:
          exec:
            command:
            - /usr/bin/healthcheck
          initialDelaySeconds: 30
          timeoutSeconds: 3
          failureTreshold: 30
        volumeMounts:
        - name : mysql
          hostPath:
            path: /var/lib/mysql
            type: Directory0rCreate
